# ETCetera-Calibrator

./: .gitignore  CMakeLists.txt  README.md
src/: Main.cpp  MainWindow.cpp  MainWindow.h
src/GoldBox/: Calibration.cpp  Calibration.h  Channel.cpp  Channel.h  Table.cpp  Table.h
src/GoldBox/ChannelSource/: AbstractChannelSource.h  Calculation.h  Sensor.cpp  Sensor.h  Table.cpp  Table.h
